@@ -15,6 +15,7 @@ FATE_LAVF-$(call ENCDEC,  GIF,                   IMAGE2)             += gif
 FATE_LAVF-$(call ENCDEC2, MPEG2VIDEO, PCM_S16LE, GXF)                += gxf
 FATE_LAVF-$(call ENCDEC,  PCM_S16LE,             IRCAM)              += ircam
 FATE_LAVF-$(call ENCDEC,  MJPEG,                 IMAGE2)             += jpg
+FATE_LAVF-$(call ENCMUX,  TTA,                   MATROSKA_AUDIO)     += mka
 FATE_LAVF-$(call ENCDEC2, MPEG4,      MP2,       MATROSKA)           += mkv
 FATE_LAVF-$(call ENCDEC,  ADPCM_YAMAHA,          MMF)                += mmf
 FATE_LAVF-$(call ENCDEC2, MPEG4,      PCM_ALAW,  MOV)                += mov ismv
@@ -44,6 +45,7 @@ FATE_LAVF-$(call ENCDEC,  FLV,                   SWF)                += swf
 FATE_LAVF-$(call ENCDEC,  TARGA,                 IMAGE2)             += tga
 FATE_LAVF-$(call ENCDEC,  TIFF,                  IMAGE2)             += tiff
 FATE_LAVF-$(call ENCDEC2, MPEG2VIDEO, MP2,       MPEGTS)             += ts
+FATE_LAVF-$(call ENCDEC,  TTA,                   TTA)                += tta
 FATE_LAVF-$(call ENCDEC,  PCM_U8,                VOC)                += voc
 FATE_LAVF-$(call ENCDEC,  PCM_S16LE,             VOC)                += voc_s16
 FATE_LAVF-$(call ENCDEC,  PCM_S16LE,             WAV)                += wav
