@@ -1,0 +1,3 @@
+b2e3746787b885d0191a1a26f3faa58f *./tests/data/lavf/lavf.mka
+43654 ./tests/data/lavf/lavf.mka
+./tests/data/lavf/lavf.mka CRC=0x3a1da17e
